# Open-gl-test

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/androidengine/: MainActivity.java
app/src/main/res/values/: strings.xml
src/main/cpp/: AndroidEngine.cpp
